# benchybench

./: .startsession  README.md  pyproject.toml
backend/: app.py  backend.railway.json  battle_royal.py  elo_tracker.py  llm_providers.py  main.py  minesweeper.py  minesweeper_experiments.py  minesweeper_heatmaps.py  minesweeper_histogram_length_text.py  minesweeper_performance.py  model_pairs.txt  models.txt  pong.py  pp.py  requirements.txt  video.py
backend/completed_games/: game_index.json  snake_game_000fe0f0-53b5-407d-8cff-d0be75ed03ef.json  snake_game_00528b91-d39b-4d5f-8906-8fecd7bd3b77.json  snake_game_005fa699-8c5b-45bb-a920-d2fb0ee2c1bf.json  snake_game_0094d9d1-b579-49a1-9cbc-3631f51b1d1c.json  snake_game_00aa16db-377c-4397-a862-ecdd37159ef4.json  snake_game_00b11127-ad22-4368-891f-5d3152aeda6c.json  snake_game_00b5e1ab-b764-4ef2-8230-108395bc2a6d.json  snake_game_00d0a9e9-d667-44d5-b21d-7b3f315fd57d.json  snake_game_00d170b6-6220-4194-9897-f3081f1e536a.json  snake_game_00e271f4-e04e-4b11-ab84-5ac80cb7323c.json  snake_game_00ebb53b-1bcd-48df-90be-fcf6567b3aaa.json  snake_game_0103f8e0-1cdc-43b3-9fd4-1bcc12cde857.json  snake_game_0104ff71-3bf8-4221-aab1-29050d718b7b.json  snake_game_0119cf71-db92-4e01-ba41-63731191091b.json  snake_game_011c91b6-1cae-4aaa-aedd-283f1e387870.json  snake_game_013200d6-65fd-4dd2-8eec-14d40447cb2e.json  snake_game_013d17b2-cbfc-4341-98c7-ee6839218d94.json  snake_game_016628cf-c0cb-42fb-9b2b-944caec5b6c6.json  snake_game_017f7180-fac8-4dea-b78b-c5053fad5cf0.json  (+2954 more)
frontend/: frontend.railway.json  package-lock.json  package.json
(+913 files in other folders)
